# lindenmayer

./: .gitattributes  .gitignore  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
docs/: DESIGN.md  platforms.md
tests/: conftest.py  evergreen_helpers.py  relay_mock.py  test_adapters.py  test_bridge_e2e.py  test_bridge_identity.py  test_bridge_publisher.py  test_bridge_translate.py  test_config.py  test_event.py  test_evergreen_cli.py  test_evergreen_query.py  test_evergreen_surface.py  test_kinds.py  test_registry_e2e.py  test_registry_linkage.py  test_registry_publisher.py  test_registry_reader.py  test_relay.py  test_verify.py
transcripts/: 04e811b2-4979-4727-a25a-69834d468753.jsonl  0def0381-57b0-460d-989e-3ef3794e06f2.jsonl  1ad14901-224a-4b7b-b471-f097641c993a.jsonl  20adc1fc-48e0-43fe-9798-cde1d1c9c022.jsonl  23add150-f59c-4fac-8c74-c71e559d13c3.jsonl  27c2ff15-66cf-472d-b738-7ab72fd0135b.jsonl  2ac417d2-d88e-473b-a87f-4075b1ea8793.jsonl  2e1f5ff6-848a-422a-aedc-3804be51f90e.jsonl  37000fb7-7506-4504-b965-b44ec584549b.jsonl  3a8a6eda-08e1-4f14-a9a5-e6475a8cb01c.jsonl  49a320bb-a72a-4cb7-a34d-5810ecb53240.jsonl  4f9b4e0b-4931-4030-9752-c9b78cdba704.jsonl  51dcb957-fa04-4f10-bcae-9bc64e96f458.jsonl  55042a64-90d7-464e-b6d6-46a2cc3dabd6.jsonl  56264443-bb82-433b-a7b1-6ad52f714e2f.jsonl  581e48af-e28a-43cb-b87a-5cd7f40f0306.jsonl  5e0ff1ab-a9b1-4e7b-b7da-4596c19a9f80.jsonl  60145b88-9a0e-4839-ae87-1a8ce747cc92.jsonl  611a22d5-0b86-4c82-8719-add725dd59d8.jsonl  6725c0a3-3037-47d0-a08c-8a447e481f4d.jsonl  README.md  (+26 more)
tree/: README.md
(+200 files in other folders)
