[project]
name = "lindenmayer"
version = "0.1.0"
description = "Control plane for governing Fractal agent subgraphs through Buzz"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lindenmayer"]
